--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@babel/preset-env": "^7.17.10",
         "@babel/register": "^7.17.7",
         "@wdio/allure-reporter": "^7.20.3",
+        "@wdio/browserstack-service": "^7.25.1",
         "@wdio/cli": "^7.20.5",
         "@wdio/local-runner": "^7.16.13",
         "@wdio/mocha-framework": "^7.16.13",
